<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">study hut</string>
    <string name="sign_in_activity">Sign-in</string>
    <string name="username_hint">Username</string>
    <string name="login_title">Login</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="register_title">Register</string>
    <string name="email_hint">Email</string>
    <string name="register_page_button">Register</string>
    <string name="verify_email_title">Verify Email</string>
    <string name="verify_email_prompt">Please check your email for a code.</string>
    <string name="verify">Verify</string>
    <string name="verify_email_code_hint">Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="send_code">Send Code</string>
    <string name="verify_email">Verify Email</string>
    <string name="loading_login_splash_screen">Checking your login...</string>
    <string name="sign_out">Sign out</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_code_hint">Code</string>
    <string name="new_password_hint">New Password</string>
    <string name="set_password">Set Password</string>
    <string name="biology">Biology</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics">Physics</string>
    <string name="subjects_title">Subjects</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="check_answer">Check Answer</string>
    <string name="answer">Answer</string>
    <string name="please_answer_the_question">Please answer the question</string>
    <string name="continueToNextPage" tools:ignore="ExtraTranslation">Continue</string>
    <string name="congratulations_1">You Smashed It!</string>
    <string name="congratulations_2">Good Work!</string>
    <string name="congratulations_3">Your rocking it!</string>
    <string name="congratulations_4">Easy Work!</string>
    <string name="congratulations_5">Expert!</string>
    <string name="congratulations_6">Champion in the making!</string>
    <string name="congratulations_7">Keep up the good work!</string>
    <string name="congratulations_8">Absolute win!</string>
    <string name="congratulations_9">Best of the best!</string>
    <string name="failure_1">Awh so close</string>
    <string name="failure_2">Almost had it</string>
    <string name="failure_3">Better luck next time</string>
    <string name="failure_4">Oooof</string>
    <string name="failure_5">You win some, you lose some</string>
    <string name="failure_6">I\'m sure you almost had it</string>
    <string name="failure_7">Okay lets try again</string>
    <string name="failure_8">No pain, No gain</string>
    <string name="end_lesson_title_1">Super star!</string>
    <string name="end_lesson_title_2">Brilliant effort!</string>
    <string name="end_lesson_title_3">Stellar work!</string>
    <string name="end_lesson_title_4">Master of the arts!</string>
    <string name="end_lesson_title_5">Ace performance!</string>
    <string name="end_lesson_title_6">Amazing work</string>
    <string name="finish_lesson">Finish lesson</string>
    <string name="subjects">Subjects</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="loading_leaderboards">Loading Leaderboards...</string>
    <string name="competitive_learning">Competitive learning</string>
    <string name="welcome_to_leaderboards_text">Welcome to competitive learning, here you compete against people around the world.\n\nGood luck!</string>
    <string name="get_started">Get Started</string>
    <string name="failed_to_load_your_current_leaderboard">Failed to load your current leaderboard.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="gold">Gold</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="unknown">Unknown</string>
    <string name="ready_to_compete">Ready to compete?</string>
    <string name="welcome_back_to_leaderboards">Welcome back to competitive learning. You were on fire last week lets keep it up!</string>
    <string name="new_rank_description">Well done, your hard work has payed off and you have now gone up a rank!</string>
    <string name="top_3_players">The top 3 players go up a rank.</string>
    <string name="players_at_risk">Players highlighted in red are at risk of going down a rank.</string>
    <string name="loading_lessons">Loading lessons...</string>
    <string name="spaced_repetition">Repetition</string>
    <string name="your_up_to_date">You\'re up to date!</string>
    <string name="end_lesson_title_mid_1">Decent job</string>
    <string name="end_lesson_title_mid_2">Good work</string>
    <string name="end_lesson_title_mid_3">You are getting there</string>
    <string name="end_lesson_title_mid_4">Nice stuff</string>
    <string name="end_lesson_title_mid_5">Past halfway</string>
    <string name="end_lesson_title_bad_1">Not quite there yet</string>
    <string name="end_lesson_title_bad_2">Lets try again later</string>
    <string name="end_lesson_title_bad_3">I am sure you miss-clicked...</string>
    <string name="end_lesson_title_bad_4">It was just a typo I am sure...</string>
    <string name="end_lesson_title_bad_5">Ok lets try again</string>
    <string name="green_lesson_warning">WARNING: you cannot earn rewards from lessons highlighted in green</string>
    <string name="achievement">Achievement</string>
    <string name="streak_description">Comeback every day to increase your streak.</string>
    <string name="streak">Streak</string>
    <string name="lessons_completed_description">Complete new lessons or revise old ones to earn more.</string>
    <string name="lessons_completed_title">Completed Lessons</string>
    <string name="total_gems_description">Revise or complete new lessons to earn gems.</string>
    <string name="total_gems_title">Gems</string>
    <string name="first_place_description">Come first in competitive learning.</string>
    <string name="first_place_title">First Place</string>
    <string name="flawless_description">Get every question right in a lesson.</string>
    <string name="flawless_title">Flawless</string>
    <string name="speed_run_description">Complete all questions in a new lesson in under a min.</string>
    <string name="speed_run_title">Speedster</string>
    <string name="revised_description">Revise lessons, from the revision tab.</string>
    <string name="revision_title">Revision</string>
    <string name="please_enter_username_and_password">Please enter username and password.</string>
    <string name="failed_to_sign_in_please_try_again">Failed to Sign-in, please try again.</string>
    <string name="getting_ready_loading">Getting ready...</string>
    <string name="ready">ready</string>
    <string name="number_of_days">" days"</string>
    <string name="single_day">" day"</string>
    <string name="lesson_ready">ready</string>
    <string name="achievements">Achievements</string>
</resources>