<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verifyEmailActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_email"
        android:textColor="@color/darkBtnTxt"
        app:backgroundTint="@color/darkBtnBg"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loadingTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:layout_editor_absoluteY="186dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:padding="16dp"
            app:boxStrokeColor="@color/text_input_layout"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconDrawable="@drawable/baseline_clear_24"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/text_input_layout"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintTop_toBottomOf="@id/usernameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:paddingStart="32dp"
            android:textColor="@color/themePurple"
            android:layout_marginTop="8dp"
            android:gravity="start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="16dp"
            app:cornerRadius="50dp"
            android:padding="12dp"
            app:backgroundTint="@color/themePurple"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/register_page_button"
            android:layout_marginTop="16dp"
            app:cornerRadius="50dp"
            android:padding="12dp"
            android:textColor="@color/darkBtnTxt"
            app:backgroundTint="@color/darkBtnBg"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>